fixed a font issue that made a span way too long

--- a/static-assets/less/main.less
+++ b/static-assets/less/main.less
@@ -86,3 +86,7 @@ table {
 		color: grey;
 	}
 }
+
+.search-label {
+	font-family: sans-serif;
+}
